[tool.poetry]
name = "tokamak"
version = "0.5.3"
description = "HTTP Router based on radix trees"
readme = "./README.md"
authors = ["Erik Aker <eraker@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
hypercorn = { version = "^0.13.2", optional = true }
starlette = { version = "^0.20.4", optional = true }
trio = { version = "^0.20.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.6.0"
hypothesis = "^6.54.0"
isort = "^5.10.1"
mypy = "^0.941"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-pycodestyle = "^2.3.0"
pytest-mypy = "^0.9.1"
twine = "^3.8.0"
Werkzeug = { git = "https://github.com/pallets/werkzeug.git", branch = "main" }
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-coverage = "^0.2"
markdown-callouts = "^0.2"
markdown-exec = "^.5"
mkdocs-gen-files = "^0.3"
mkdocs-literate-nav = "^0.4"
mkdocs-material = "^7.3"
mkdocs-section-index = "^0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
web = ["trio"]
examples = ["hypercorn", "starlette"]
full = ["hypercorn", "trio"]
