[tool.poetry]
name = "tokamak"
version = "0.5.5"
description = "HTTP Router based on radix trees"
readme = "./README.md"
authors = ["Erik Aker <eraker@gmail.com>"]
license = "MPL-2.0"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/erewok/tokamak"
repository = "https://github.com/erewok/tokamak"
documentation = "https://tokamak.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.9"
hypercorn = { version = "^0.13.2", optional = true }
starlette = { version = "^0.20.4", optional = true }
trio = { version = "^0.20.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.6.0"
hypothesis = "^6.54.0"
isort = "^5.10.1"
mypy = "^0.941"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-pycodestyle = "^2.3.0"
pytest-mypy = "^0.9.1"
twine = "^3.8.0"
Werkzeug = { git = "https://github.com/pallets/werkzeug.git", branch = "main" }
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-coverage = "^0.2"
markdown-callouts = "^0.2"
markdown-exec = "^.5"
mkdocs-gen-files = "^0.3"
mkdocs-literate-nav = "^0.4"
mkdocs-material = "^7.3"
mkdocs-section-index = "^0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
web = ["trio"]
examples = ["hypercorn", "starlette"]
full = ["hypercorn", "trio"]
