[project]
name = "tokamak"
version = "0.6.1"
description = "HTTP Router based on radix trees"
readme = "README.md"
authors = [
    { "name" = "Erik Aker", "email" = "eraker@gmail.com" },
]
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
homepage = "https://github.com/erewok/tokamak"
repository = "https://github.com/erewok/tokamak"
documentation = "https://tokamak.readthedocs.io/en/latest/"

[tool.uv]
dev-dependencies = [
    "build>=1.2.1",
    "hypothesis>=6.119.3",
    "isort>=5.13.2",
    "mypy>=1",
    "pytest>=8.3.3",
    # pytest-asyncio needs to be pinned to 0.21.1 until this issue is resolved:
    # https://github.com/pytest-dev/pytest-asyncio/issues/706
    "pytest-cov>=6",
    "pytest-mypy>=0.10.3",
    "ruff>=0.6",
]

[project.optional-dependencies]
web = ["trio"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-coverage>=1.1.0",
    "markdown-callouts>=0.4.0",
    "markdown-exec>=1.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-section-index>=0.3.9",
]
benchmarks = [
    "Werkzeug",
]
examples = [
  "starlette",
  "hypercorn",
  "trio",
]

[tool.uv.sources]
Werkzeug = { git = "https://github.com/pallets/werkzeug.git", branch = "main" }

[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "8.3"
pythonpath = "."
xfail_strict = "True"
addopts = "--cov-report=term-missing:skip-covered --cov=tokamak --strict-config --strict-markers --cov-report html"
testpaths = ["tests"]
filterwarnings = [
    "error"
]

[tool.ruff]
src = ["tokamak", "tests"]
fix = true
show-fixes = true
output-format = "full"
line-length = 110

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "FA",  # flake8-future-annotations
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = false