[options.entry_points]
console_scripts =
    tokamak-example = scripts.tokamak_app

[pycodestyle]
ignore = W503,E203,B305
max-line-length = 110

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False

[tool:isort]
profile = black
combine_as_imports = True

[tool:pytest]
addopts =
  --pycodestyle
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov=tokamak
  --cov=tests
  # -rxXs
  --strict-config
  --strict-markers
pythonpath = .
xfail_strict=True
filterwarnings=
    # Turn warnings that aren't filtered into exceptions
    error
    # https://github.com/Tinche/aiofiles/issues/81
    ignore: "@coroutine" decorator is deprecated.*:DeprecationWarning
